--- a/index.html
+++ b/index.html
@@ -1,104 +1,92 @@
 <html>
-    <style>
-        body {
-            align-items: center;
-            text-align: center;
-        }
+<style>
+    body {
+        align-items: center;
+        text-align: center;
+    }
 
-        table, th, td {
-            border: 1px solid black;
-            border-collapse: collapse;
-            margin: auto;
-        }
+    table,
+    th,
+    td {
+        border: 1px solid black;
+        border-collapse: collapse;
+        margin: auto;
+    }
 
-        th {
-            padding-left: 1rem;
-            padding-right: 1rem;
-        }
+    th {
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
 
-        td {
-            text-align: center;
-        }
+    td {
+        text-align: center;
+    }
 
-        #compare-result {
-            margin-top: 1rem;
-            font-weight: bold;
-        }
+    #compare-result {
+        margin-top: 1rem;
+        font-weight: bold;
+    }
 
-        .--same-results {
-            color: green;
-        }
+    .--same-results {
+        color: green;
+    }
 
-        .--different-results {
-            color: red;
-        }
+    .--different-results {
+        color: red;
+    }
 
-        .--hide {
-            display: none;
-        }
+    .--hide {
+        display: none;
+    }
 
-        section {
-            margin-top: 1rem;
-        }
-    </style>
+    section {
+        margin-top: 1rem;
+    }
+</style>
+
 <head>
     <title>JS Truth Table</title>
 </head>
+
 <body>
     <div>
         <h1>Hello JS Truth Table</h1>
         <h3 id="timestamp"></h3>
-        <div>
-            <table id="truth-table"></table>
-            <div id="compare-result" class="--same-results --hide">Results are the same</div>
-            <input id="reset" type="button">TODO: Reset</input>
-        </div>
-        <div>
-            <section id="variables">
-            </section>
-            <section>
-                <input id="new-var" type="text"/>
-                <input
-                    id="add-new-var"
-                    type="button"
-                >
-                    TODO: Add
-                </input>
-            </section>
-            <section>
-                <label>Initial Equation</label>
-                <input
-                    id="init-equation"
-                    type="text"
-                    value="(var1 && (var2 || var3 || null)) || var3"
-                />
-            </section>
-            <section>
-                <label>New Equation</label>
-                <input
-                    id="new-equation"
-                    type="text"
-                    value="var1 && var2 || var3"
-                />
-            </section>
-            <section>
-                <input
-                    id="run"
-                    type="button"
-                    onClick="run()"
-                >
-                    Run
-                </input>
-            </section>
-        </div>
+    </div>
+    <div id="results" class="--hide">
+        <table id="truth-table"></table>
+        <div id="compare-result" class="--same-results">Results are the same</div>
+        <input id="reset" type="button" onClick="reset()" value="Reset" />
+    </div>
+    <div id="setup">
+        <section id="variables">
+        </section>
+        <section>
+            <input id="new-var" type="text" />
+            <input id="add-new-var" type="button" onClick="add()" value="TODO: Add" />
+        </section>
+        <section>
+            <label>Initial Equation</label>
+            <input id="init-equation" type="text" value="(var1 && (var2 || var3 || null)) || var3" />
+        </section>
+        <section>
+            <label>New Equation</label>
+            <input id="new-equation" type="text" value="var1 && var2 || var3" />
+        </section>
+        <section>
+            <input id="run" type="button" onClick="run()" class="button" value="Run" />
+        </section>
     </div>
 </body>
 <script>
     //DOM
+    const results = document.getElementById("results");
     const timestamp = document.getElementById("timestamp");
     const table = document.getElementById("truth-table");
     const compareResults = document.getElementById("compare-result");
-    
+
+    const setup = document.getElementById("setup");
+    const newVar = document.getElementById("new-var");
     const initEquation = document.getElementById("init-equation");
     const newEquation = document.getElementById("new-equation");
 
@@ -110,15 +98,15 @@
     };
 
     //methods
-    const evalInitEquation = ({var1, var2, var3} = variables) => eval(initEquation.value);
-    const evalNewEquation = ({var1, var2, var3} = variables) => eval(newEquation.value);
+    const evalInitEquation = ({ var1, var2, var3 } = variables) => eval(initEquation.value);
+    const evalNewEquation = ({ var1, var2, var3 } = variables) => eval(newEquation.value);
 
     const getTruths = count => {
         const truths = [];
 
-        for(let i = 0; i < Math.pow(2, count); i++) {
+        for (let i = 0; i < Math.pow(2, count); i++) {
             const inner = [];
-            for(let k = count - 1; k >= 0; k--) {
+            for (let k = count - 1; k >= 0; k--) {
                 inner.push(i % Math.pow(2, k + 1) >= Math.pow(2, k));
             }
             truths.push(inner);
@@ -130,7 +118,7 @@
 
     const getHeader = keys => {
         let header = "<tr>";
-        for(let i = 0; i < keys.length; i++) {
+        for (let i = 0; i < keys.length; i++) {
             header += `<th>${keys[i]}</th>`;
         }
         header += `<th>${initEquation.value}</th><th>${newEquation.value}</th>`;
@@ -146,7 +134,7 @@
     const getRow = ({ i, truths, keys }) => {
         let row = "<tr>";
         const truth = truths[i];
-        for(let k = 0; k < truth.length; k++) {
+        for (let k = 0; k < truth.length; k++) {
             const key = keys[k];
             variables[key] = truth[k];
             row += getRowColumn(truth[k], false);
@@ -155,7 +143,17 @@
         row += getRowColumn(evalNewEquation());
         row += "</tr>";
         return row;
-    };    
+    };
+
+    //DOM methods
+    const add = () => {
+        alert('add');
+    };
+
+    const reset = () => {
+        results.classList.add("--hide");
+        setup.classList.remove("--hide");
+    };
 
     //work
     const run = () => {
@@ -165,20 +163,21 @@
 
         let truthTableHtml = getHeader(keys);
 
-        for(let i = 0; i < truths.length; i++) {
+        for (let i = 0; i < truths.length; i++) {
             truthTableHtml += getRow({ truths, keys, i })
-            if(evalInitEquation() != evalNewEquation()) {
+            if (evalInitEquation() != evalNewEquation()) {
                 compareResults.innerText = "Results are not the same";
                 compareResults.classList.add("--different-results");
             }
         }
 
         table.innerHTML = truthTableHtml;
-        compareResults.classList.remove("--hide");
+        results.classList.remove("--hide");
+        setup.classList.add("--hide");
         timestamp.innerText = `Updated: ${new Date()}`;
     };
 
-    // TODO: remove
-    run();
+    timestamp.innerText = `Updated: ${new Date()}`;
 </script>
+
 </html>
