--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <html>
 <style>
+    html {
+        height: 100%;
+        width: 100%;
+    }
+
     body {
         align-items: center;
         text-align: center;
         position: relative;
+        height: 100%;
+        width: 100%;
+        margin: 0;
     }
 
     section {
